human_written_tests/WebAssembly/processed_control_flow_validation/test_block_72.wast
(assert_invalid
  (module (func $type-break-void-vs-i32 (result i32)
    (block (result i32) (br 0 (nop)) (i32.const 1))
  ))
  "type mismatch"
)